--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -6,4 +6,4 @@ jobs:
   init:
     runs-on: self-hosted
     steps:
-      - run: 'hello Ali, good work dude :)'
+      - run: 'hello Ali, good work dude'
